@@ -1,5 +1,4 @@
-README
-INSTALL
-CREDITS
-LICENSE
-LICENSE_3RD_PARTY
+airtime/README
+airtime/CREDITS
+airtime/LICENSE_3RD_PARTY
+airtime/docs/README.txt
