@@ -1,9 +1,10 @@
 #/bin/sh
 
-VERSION=1.6.1-GA
+VERSION=1.7.0-GA
+DEBVERSION=1.7.0
 DLURL=http://sourceforge.net/projects/airtime/files/airtime-${VERSION}.tar.gz/download
 MIRRORPATH=/tmp
-BUILDDEST=/tmp/airtime-pkg/
+BUILDDEST=/tmp/airtime-${DEBVERSION}/
 DEBDIR=`pwd`/debian
 
 if [ ! -f ${MIRRORPATH}/airtime-${VERSION}.tar.gz ]; then
@@ -12,26 +13,39 @@ if [ ! -f ${MIRRORPATH}/airtime-${VERSION}.tar.gz ]; then
 		${DLURL} 
 fi
 
+#delete prev. deb package files
+rm -f ${BUILDDEST}/../airtime_${DEBVERSION}*
 rm -rf ${BUILDDEST}
-mkdir -p ${BUILDDEST}/airtime
-#mkdir -p ${BUILDDEST}/debian
 
-cd ${BUILDDEST}/airtime
-tar xvzf ${MIRRORPATH}/airtime-${VERSION}.tar.gz || exit
-cd ${BUILDDEST}
+mkdir -p ${BUILDDEST}
 
+cd ${BUILDDEST} || exit
+tar xzf ${MIRRORPATH}/airtime-${VERSION}.tar.gz || exit
 cp -a $DEBDIR debian || exit
 
+# FIXES fo 1.6 #############
+#find airtime \( \
+#	   -iname "*.php" -o -iname "*.js" -o -iname "*.mp3" \
+#	-o -iname "*.xsd" -o -iname "*.xsl" -o -iname "*.xml" \
+#	-o -iname "*.cfg.*" -o -iname "*.txt" \
+#	\) -exec chmod -x "{}" \;
+#
+#find airtime/pypo -iname "*.py"  \
+#	-exec chmod +x "{}" \;
+
+echo "RewriteBase /" >> airtime/public/.htaccess
+
+#############################
 
 debuild $@ || exit
 
 ls -l /tmp/airtime*deb
 ls -l /tmp/airtime*changes
 
-exit 
 
-lintian -i --pedantic /tmp/airtime_${DEBRELEASE}_*.changes | tee /tmp/airtime-${DEBRELEASE}.issues
+lintian -i --pedantic ${BUILDDEST}/../airtime_${DEBVERSION}*.changes | tee /tmp/airtime-${DEBVERSION}.issues
 
+exit
 echo -n "UPLOAD? [enter|CTRL-C]" ; read
 
-dput rg42 /tmp/airtime_${DEBRELEASE}_*.changes      
+dput rg42 /tmp/airtime_${DEBVERSION}*.changes      
